hphp/test/slow/unserialize-invalid-dynamic-prop-name/fast-protected-empty.php.expectf
Fatal error: Cannot access empty property in %s/hphp/test/slow/unserialize-invalid-dynamic-prop-name/fast-protected-empty.php on line 6
